Add about section

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -21,6 +21,8 @@ $space-xxxl: 56px;
 
 $bp-large: 768px;
 
+$transition: cubic-bezier(0.645, 0.045, 0.355, 1);
+
 @keyframes fade-in {
   0% {
     opacity: 0;
