--- a/assets/scss/reset.scss
+++ b/assets/scss/reset.scss
@@ -1,9 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300;400;600&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap');
 
 html,
 body {
   height: 100%;
+  background-color: #172a45;
+  scroll-behavior: smooth;
 
   .no-scroll {
     overflow: hidden;
