Add experience section

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,6 +1,7 @@
 $c-accent: #f33643;
 $c-accent-dark: #0a192f;
 $c-accent-light: #ffe3e3;
+$c-accent-transparent: #f3364321;
 $c-fogra: #172a45;
 $c-main: #ccd6f6;
 $c-navy-light: #a864ff;
