--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -5,6 +5,7 @@ $c-accent-transparent: #f3364321;
 $c-fogra: #172a45;
 $c-main: #ccd6f6;
 $c-navy-light: #a864ff;
+$c-navy-dark: #4f2592;
 
 $c-white: #fff;
 $c-black: #000;
