update styling & fix lighthouse

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,12 +1,9 @@
-$c-accent: #f33643;
-$c-accent-dark: #0a192f;
-$c-accent-light: #ffe3e3;
-$c-accent-transparent: #f3364321;
-$c-fogra: #172a45;
-$c-main: #ccd6f6;
-$c-navy-light: #a864ff;
-$c-navy-dark: #4f2592;
-
+$c-brand: #fff364;
+$c-light-accent: #74b9ed;
+$c-dark-accent: #ba75aa;
+$c-light-shades: #fafaf8;
+$c-dark-shades: #091421;
+$c-background: #0a192f;
 $c-white: #fff;
 $c-black: #000;
 
