Use Contenful for data

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,13 +1,13 @@
-$c-brand: #fff364;
-$c-light-accent: #74b9ed;
-$c-dark-accent: #ba75aa;
+$c-brand: #fae501;
+$c-light-accent: #4fb5e1;
+$c-dark-accent: #ac4648;
 $c-light-shades: #fafaf8;
 $c-dark-shades: #091421;
 $c-background: #0a192f;
 $c-white: #fff;
 $c-black: #000;
 
-$padding-lg: 48px;
+$padding-lg: 36px;
 $padding-sm: calc(#{$padding-lg} / 2);
 
 $space-xs: 8px;
