add GA and update colors

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,6 +1,7 @@
-$c-brand: #fae501;
+// $c-brand: #fae501;
+$c-brand: #ff6464;
 $c-light-accent: #4fb5e1;
-$c-dark-accent: #ac4648;
+$c-dark-accent: #ffb264;
 $c-light-shades: #fafaf8;
 $c-dark-shades: #091421;
 $c-background: #0a192f;
