update max width

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -21,6 +21,7 @@ $space-xl: 5 * $grid-pt;
 $space-xxl: 6 * $grid-pt;
 $space-xxxl: 7 * $grid-pt;
 
+$site-width: 140 * $grid-pt;
 $bp-large: 768px;
 
 $transition: cubic-bezier(0.645, 0.045, 0.355, 1);
