--- a/assets/scss/reset.scss
+++ b/assets/scss/reset.scss
@@ -32,3 +32,12 @@ html {
 #__nuxt {
   min-height: 100%;
 }
+
+// https://vuejs.org/v2/guide/transitions.html
+.fade-enter-active,
+.fade-leave-active {
+  transition: opacity 500ms;
+}
+.fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
+  opacity: 0;
+}
