full-width feature image

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -8,7 +8,7 @@ $c-white: #fff;
 $c-black: #000;
 
 $padding-lg: 56px;
-$padding-sm: calc(#{$padding-lg} / 2);
+$padding-sm: $padding-lg / 2;
 
 $grid-pt: 8px;
 
